--- a/dev/index.html
+++ b/dev/index.html
@@ -9,7 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div></div>
+    <div></div>
+    <div></div>
 <script src="js/main.js"></script>
 </body>
 </html>
