--- a/dev/index.html
+++ b/dev/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="scss/main.css">
     <title>Document</title>
 </head>
 <body>
+
+<button class="click">Старт / Пауза</button>
+<button class="reset">Сбросить</button>
+<br><br>
+
+<div></div>
 
 <script src="js/main.js"></script>
 </body>
